Improve CSV error handling
When there are parse errors on some lines during an content import from
CSV, these are skipped instead of failing the whole import. The endpoint
responds with 200 instead of 400 in these cases. Errors are instead
indicated in the response body which contains import statistics.

Closes: #253